--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -2,18 +2,12 @@
 <html>
 	<head>
 		<title>
-			SiwMovie - Homepage
+			SiwRicettario - Homepage
 		</title>
 		<link rel="stylesheet" href="/stile.css?version=2" />
 	</head>
 	<body>
-		<div><img src="/logo-siw.png" width="50%"/></div>
-		<h1>Operazioni</h1>
-		<div>
-			<a href="/indexMovie">Operazioni sui film</a>
-		</div>
-		<div>
-			<a href="/indexArtist">Operazioni sugli artisti</a>
-		</div>
+		<div><img src="/siw-logo.png" width="50%"/></div>
+		<h1>Operazioni(TEST)</h1>
 	</body>
 </html>
