--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>
-			SiwRicettario - Homepage
-		</title>
-		<link rel="stylesheet" href="/stile.css?version=2" />
-	</head>
-	<body>
-		<div><img src="/siw-logo.jpg" width="50%"/></div>
-		<h1>Operazioni(TEST)</h1>
-	</body>
+
+<head>
+	<title>
+		SiwRicettario - Homepage
+	</title>
+	<link rel="stylesheet" href="/stile.css?version=2" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<header>
+	
+</header>
+<body>
+	<div><img src="/siw-logo.jpg" width="50%" height="50%" /></div>
+	<h1>Operazioni(TEST)</h1>
+</body>
+
 </html>
