formNewRicetta implementato e Credentials aggiunte
Necessario template ricetta.html per finire testing di inserimento ricette

--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -12,8 +12,9 @@
 	
 </header>
 <body>
-	<div><img src="/siw-logo.jpg" width="50%" height="50%" /></div>
+	<div><img src="/siw-logo.jpg" width="10%"  /></div>
 	<h1>Operazioni(TEST)</h1>
+	<a href="/manageRicette">Controlla qualche ricetta</a>
 </body>
 
 </html>
