Updated project with some hmtl files
Create ricetta.html, ricette.html, searchRicetta.html, foundRicetta.html.

Ovviamente non ci sono le implementazioni per la security e sono delle pagine create solo per portarci avanti con il progetto non sono complete anzi....

--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div><img src="/siw-logo.jpg" width="10%"  /></div>
 	<h1>Operazioni(TEST)</h1>
-	<a href="/manageRicette">Controlla qualche ricetta</a>
+	<a href="/ricette">Controlla qualche ricetta</a>
 </body>
 
 </html>
