--- a/siw-ricettario-VDL-FF/src/main/resources/templates/manageRicette.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/manageRicette.html
@@ -17,7 +17,7 @@
 	<div th:if="${ricette.isEmpty()}">Non ci sono ricette nel sistema</div>
 	<ul>
 		<li th:each="ricetta : ${ricette}">
-			<span th:text="${ricetta.nome} + ' (' + ${ricetta.author.username} + ')'">Carbonara (Totti2001)</span>
+			<span th:text="${ricetta.title} + ' (' + ${ricetta.author.username} + ')'">Carbonara (Totti2001)</span>
 		</li>
 	</ul>
 	<a href="/formNewRicetta">Aggiungi una ricetta</a>
