Copia prima di mappe
Versione funzionante con ricette formate da title e descriptionRicetta funzionante con salvataggio su db e visualizzazione su browser.
Prossimo step mappe di ingredienti e porzioni e security lato utente

--- a/siw-ricettario-VDL-FF/src/main/resources/templates/formSearchRicetta.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/formSearchRicetta.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+		<div><a href="/"><img src="/siw-logo.jpg" width="10%"  /></a></div>
+
 	<h1>Cerca ricetta per nome o ingrediente?????</h1>
 	<form th:action="@{/searchRicetta}" method="post">
 		<div>Nome: <input type="text" th:value="${title}" name="title" />
