--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -12,9 +12,9 @@
 	
 </header>
 <body>
-	<div><img src="/siw-logo.jpg" width="10%"  /></div>
+	<div><a href="/"><img src="/siw-logo.jpg" width="10%"  /></a></div>
 	<h1>Operazioni(TEST)</h1>
-	<a href="/ricette">Controlla qualche ricetta</a>
+	<a href="/manageRicette">Controlla qualche ricetta</a>
 </body>
 
 </html>
