--- a/siw-ricettario-VDL-FF/src/main/resources/templates/formNewRicetta.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/formNewRicetta.html
@@ -13,6 +13,8 @@
 	<header>
 
 	</header>
+		<div><a href="/"><img src="/siw-logo.jpg" width="10%"  /></a></div>
+
 	<h1>Aggiungi la tua ricetta</h1>
 	<form th:action="@{/ricetta}" method="POST" th:object="${ricetta}">
 		<div th:if="${#fields.hasGlobalErrors()}">
