--- a/siw-ricettario-VDL-FF/src/main/resources/templates/foundRicette.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/foundRicette.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
+	<div><a href="/"><img src="/siw-logo.jpg" width="10%"  /></a></div>
 	<h1>Ricette che soddisfano i requisiti</h1>
 	<div th:if="${ricette.isEmpty()}">Non ci sono film che soddisfano i requisiti</div>
 	<ul th:if="${!ricette.isEmpty()}">
