working build before maps tests
creo relazione tra ingrediente e ricetta tramite tabella porzionamento (id_ing, id_ricetta,qty)
In questa versione le ricette vengono salvate con successo
Altro da implementare: Utenti-credenziali, link con ricette, portate standard, gestione ingredienti presenti nel db

--- a/siw-ricettario-VDL-FF/src/main/resources/templates/formNewRicetta.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/formNewRicetta.html
@@ -32,6 +32,8 @@
 		    <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
 		    </span>
 		</div>
+		<!-->POSSO INSERIRE GLI INGREDIENTI COME UNA LISTA DEI VARI INGREDIENTI + PORZ E CLICCARE ADD, POPOLA LA LISTA E 
+		DA LA POSSIBILITà DI INSERIRNE UN ALTRO<-->
 		<div>
 			<span><button type="submit">Conferma</button></span>
 		</div>
