--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -15,6 +15,8 @@
 	<div><a href="/"><img src="/siw-logo.jpg" width="10%"  /></a></div>
 	<h1>Operazioni(TEST)</h1>
 	<a href="/manageRicette">Controlla qualche ricetta</a>
+	
+	<div><a href="/ingrediente">Gestisci ingredienti</a></div>
 </body>
 
 </html>
