--- a/siw-ricettario-VDL-FF/src/main/resources/static/stile.css
+++ b/siw-ricettario-VDL-FF/src/main/resources/static/stile.css
@@ -22,3 +22,17 @@ a {
 a:hover { 
 	text-decoration: underline; 
 }
+
+img {
+  width: 7cm;
+  border-radius: 45%;
+}
+h1 {
+  color: green;
+  font-size: xx-large;
+}
+
+h2 {
+  color: indigo;
+  font-size: x-large;
+}
