--- a/siw-ricettario-VDL-FF/src/main/resources/templates/ricetta.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/ricetta.html
@@ -18,6 +18,10 @@
     <div th:if="${ricetta}">
         <span th:text="${ricetta.title}">Carbonara</span>
         <span th:text="'(' + ${ricetta.descriptionRicetta} + ')'">apri justeat</span>
+        	<div th:each="img : ${movie.pictures}">
+    		<!-- Immagine-->
+    		<img th:src="'data:image;base64,'+${img.getImgData()}"></img>
+		</div>
     </div>
     <div th:unless="${ricetta}">Non esiste</div>
 	</body>
