--- a/siw-ricettario-VDL-FF/src/main/resources/templates/formRegisterUser.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/formRegisterUser.html
@@ -3,9 +3,11 @@
 
 <head>
 	<title>
-		Ricetta - Registrazione
+		SiwMovie - Registrazione
 	</title>
 	<link rel="stylesheet" href="/css/stile.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -20,7 +22,7 @@
 	</header>
 
 	<div>
-		<a href="/"><img src="/images/siw-logo.jpg" width="50%" /></a>
+		<a href="/"><img src="/images/logo-siw.png" width="50%" /></a>
 	</div>
 	<h1>Registrazione nuovo utente</h1>
 	<form th:action="@{/register}" method="POST">
