--- a/siw-ricettario-VDL-FF/src/main/resources/templates/ingredienti.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/ingredienti.html
@@ -5,7 +5,7 @@
 	<title>
 		Ingredienti
 	</title>
-	<link rel="stylesheet" href="/stile.css?version=2" />
+	<link rel="stylesheet" href="/css/stile.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
