--- a/siw-ricettario-VDL-FF/src/main/resources/templates/formLogin.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/formLogin.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>
-		Ricetta - Login
+		SiwMovie - Login
 	</title>
 	<link rel="stylesheet" href="/css/stile.css" />
 </head>
@@ -20,7 +20,7 @@
 	</header>
 
 	<div>
-		<a href="/"><img src="/images/siw-logo.jpg" width="50%"/></a>
+		<a href="/"><img src="/images/logo-siw.png" width="50%"/></a>
 	</div>
 	<h1>Login</h1>
 	<form th:action="@{/login}" method="POST">
