--- a/siw-ricettario-VDL-FF/src/main/resources/templates/manageRicette.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/manageRicette.html
@@ -5,7 +5,7 @@
 	<title>
 		Ricette
 	</title>
-	<link rel="stylesheet" href="/stile.css?version=2" />
+	<link rel="stylesheet" href="/css/stile.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
@@ -17,7 +17,7 @@
 	<div th:if="${ricette.isEmpty()}">Non ci sono ricette nel sistema</div>
 	<ul>
 		<li th:each="ricetta : ${ricette}">
-			<span th:text="${ricetta.title} +  ')'">Carbonara (Totti2001)</span>
+			<span th:text="${ricetta.title} + '(' + ')'">Carbonara (Totti2001)</span>
 			<a th:href="@{'/ricetta' + '/' + ${ricetta.id}}">Visualizza</a>
 		</li>
 	</ul>
